--- a/plugins/stone-phaser/Makefile
+++ b/plugins/stone-phaser/Makefile
@@ -66,6 +66,7 @@ FILES_DSP = \
 include ../../dpf/Makefile.plugins.mk
 
 BUILD_CXX_FLAGS += -Imeta
+BUILD_CXX_FLAGS += -Ithirdparty
 
 # --------------------------------------------------------------
 # Enable all selected plugin types
