--- a/plugins/stone-phaser-stereo/Makefile
+++ b/plugins/stone-phaser-stereo/Makefile
@@ -66,6 +66,7 @@ FILES_DSP = \
 include ../../dpf/Makefile.plugins.mk
 
 BUILD_CXX_FLAGS += -Imeta
+BUILD_CXX_FLAGS += -Igen
 BUILD_CXX_FLAGS += -Ithirdparty
 
 # --------------------------------------------------------------
