--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ branches:
 cache:
   directories:
     - download
+    - build-cache
 
 matrix:
   include:
@@ -25,7 +26,7 @@ matrix:
         - sudo apt-get install kxstudio-repos
         - sudo apt-get update -qq
       install:
-        - sudo apt-get install -y g++ pkg-config "${_MINGW}"-x-gcc "${_MINGW}"-x-pkgconfig wine
+        - sudo apt-get install -y g++ pkg-config fakeroot "${_MINGW}"-x-gcc "${_MINGW}"-x-pkgconfig wine
       script:
         - bash .travis/script-mingw.sh
         - cp -drfv bin stone-phaser-"$_BUILD"
@@ -47,7 +48,7 @@ matrix:
         - sudo apt-get install kxstudio-repos
         - sudo apt-get update -qq
       install:
-        - sudo apt-get install -y g++ pkg-config "${_MINGW}"-x-gcc "${_MINGW}"-x-pkgconfig wine
+        - sudo apt-get install -y g++ pkg-config fakeroot "${_MINGW}"-x-gcc "${_MINGW}"-x-pkgconfig wine
       script:
         - bash .travis/script-mingw.sh
         - cp -drfv bin stone-phaser-"$_BUILD"
