--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,10 @@ matrix:
       sudo: required
       env:
         - _BUILD=macos
+      before_install:
+        - source .travis/macports-ci install
+      install:
+        - sudo port -v install cairo
       script:
         - bash .travis/script-macos.sh
         - cp -av bin stone-phaser-"$_BUILD"
