--- a/.travis.yml
+++ b/.travis.yml
@@ -53,9 +53,27 @@ matrix:
         - install -d release
         - zip -9 -r release/stone-phaser-"$_BUILD".zip stone-phaser-"$_BUILD"
     - os: osx
+      osx_image: xcode9.2
       sudo: required
       env:
         - _BUILD=macos
+      addons:
+        homebrew:
+          packages:
+            - cairo
+          update: true
+      cache:
+        directories:
+          - $HOME/Library/Caches/Homebrew
+          - /usr/local/Homebrew
+      before_cache:
+        - brew cleanup
+        # Credit https://discourse.brew.sh/t/best-practice-for-homebrew-on-travis-brew-update-is-5min-to-build-time/5215/9
+        # Cache only .git files under "/usr/local/Homebrew" so "brew update" does not take 5min every build
+        - find /usr/local/Homebrew \! -regex ".+\.git.+" -delete
+      install:
+        # static link only :^)
+        - sudo rm -f /usr/local/lib/*.dylib
       script:
         - bash .travis/script-macos.sh
         - cp -av bin stone-phaser-"$_BUILD"
